[project]
name = "langchain-kuzu"
version = "0.4.0"
description = "An integration package connecting Kùzu, an embedded graph database, and LangChain"
authors = ["mewim", "prrao87"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kuzu>=0.9.0",
    "langchain>=0.3.22",
    "langchain-core>=0.3.50",
]

[dependency-groups]
dev = [
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.12",
]
